# ChangeLog for app-text/libwps
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/app-text/cvs-repo/gentoo-x86/app-text/libwps/ChangeLog,v 1.20 2012/04/23 10:50:33 scarabeus Exp $

*libwps-0.2.5 (23 Apr 2012)

  23 Apr 2012; Tomáš Chvátal <scarabeus@gentoo.org> +libwps-0.2.5.ebuild:
  Version bump to the latest.

  06 Apr 2012; Tomáš Chvátal <scarabeus@gentoo.org> -libwps-0.2.3.ebuild:
  Remove old.

  26 Mar 2012; Brent Baude <ranger@gentoo.org> libwps-0.2.4.ebuild:
  Marking libwps-0.2.4 ~ppc64 for bug 398521

  05 Mar 2012; Brent Baude <ranger@gentoo.org> libwps-0.2.4.ebuild:
  Marking libwps-0.2.4 ppc stable for bug 393007

  23 Feb 2012; Tomáš Chvátal <scarabeus@gentoo.org> -libwps-0.2.2.ebuild,
  libwps-0.2.3.ebuild, libwps-0.2.4.ebuild:
  Remove the [-nodot] check that  is not available in latest. Remove
  overshadowed.

  14 Jan 2012; Markus Meier <maekke@gentoo.org> libwps-0.2.4.ebuild:
  x86 stable, bug #393007

  29 Dec 2011; Pacho Ramos <pacho@gentoo.org> libwps-0.2.4.ebuild:
  amd64 stable, bug 393007

  18 Dec 2011; Mark Loeser <halcy0n@gentoo.org> libwps-0.2.3.ebuild:
  Stable for ppc; bug #387187

*libwps-0.2.4 (29 Nov 2011)

  29 Nov 2011; Tomáš Chvátal <scarabeus@gentoo.org> +libwps-0.2.4.ebuild:
  Version bump to latest.

  26 Oct 2011; Tony Vroon <chainsaw@gentoo.org> libwps-0.2.3.ebuild:
  Marked stable on AMD64 based on arch testing by Ian "idella4" Delaney &
  Agostino "ago" Sarubbo in bug #387187.

  21 Oct 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> libwps-0.2.2.ebuild:
  x86 stable wrt bug #385699

  16 Oct 2011; Kacper Kowalik <xarthisius@gentoo.org> libwps-0.2.2.ebuild:
  ppc stable wrt #385699

  16 Oct 2011; Tomáš Chvátal <scarabeus@gentoo.org> libwps-0.2.3.ebuild:
  Add pkgconfig to depend.

  14 Oct 2011; Samuli Suominen <ssuominen@gentoo.org> libwps-0.2.2.ebuild:
  amd64 stable wrt #385699

*libwps-0.2.3 (07 Oct 2011)
