@@ -2,25 +2,23 @@
 Hash: SHA1
 
 DIST libwps-0.2.4.tar.xz 271784 RMD160 693969eeb90b29bc5d34fa31f038e7e142d80f42 SHA1 bc32ac4c566191ffa51161cceacdffc931692f25 SHA256 40e7ec96e7715b2063b7fe87ff679956558e46bb3f1ca9f86b3bab6e3f2596d6
-DIST libwps-0.2.5.tar.xz 75520 RMD160 6b56a537cc84a2c5db8e511179acc04ffa90232a SHA1 b265a28e28047c680fe354c047bafb815f604f0d SHA256 80e2ecbed617a87236c1519a59fa05725bced727192d060dea22f47774b76218
 EBUILD libwps-0.2.4.ebuild 840 RMD160 f38771de6179aa0bf0ce65dfe62af7a775010552 SHA1 b3707c73f0d8010161144b52d0d709fb0f62f7c8 SHA256 bafaa34e03a9af0221820aa71034115dc9ad449e92f646ffe3cd1feb315b9057
-EBUILD libwps-0.2.5.ebuild 846 RMD160 73e82d748f035beb2dca30b4c90ca14ba33fb414 SHA1 75ce5f2f3a28364a9d6b74fef18382bfad2298e7 SHA256 a6f6e849eaeb8948f2fe1a9ad5c8c2010648f6dda032de1203edfd637b7d745e
-MISC ChangeLog 2830 RMD160 85a472f1e16e4e7444825f7bb5f947078366fd68 SHA1 a43ba305c159bc997eac2e23f48c9abf7249aae7 SHA256 f82488dbf6e860f9b86f3e3aca02dc72fe64956cbd4159dcb5f837625f19afbc
+MISC ChangeLog 2958 RMD160 0cc1fa32c8e6456381608228bfa4c008b534db10 SHA1 cdb4cc02142c6a38f96d411fa78a0699be104082 SHA256 c9e7fc3f9d2839013acd2d5023f81314e7de6817fb4fb593bd0f5f26616a720f
 MISC metadata.xml 202 RMD160 da9a051f0f8f8e34f758afb1bd81e7696c844eeb SHA1 f757e09ca2f9ac304059f764fba4dab297e3a391 SHA256 0385d3046d1908b2beb7e7537b8a298767fa61bdc2c2bb835d2e81851e8bf52b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iQIcBAEBAgAGBQJPlTRiAAoJEOSiRoyO7jvo3fsP/1ZQUVlp0orqlbOzz522UiMS
-ud1OyAVmdAQ1RATz6L3YEdN/TYPSBxmL0TmbVVT9SWFt5/G3YUpezxJY+7z0/ZFL
-Wkgd7Z6ckojhEe8aQUazrWnbOJYJOVw75y5NUKZYSMv9z8b8gaRYTDujwYbGBD9x
-Kq61df68kNY+JZkBEZ5Gcw2ZIzr7Q1xJ69AjXUhpbV9ZUaHHm1ueEUsqA/2ItDvp
-PjaAIaHVlnMFALlY5ftmNN1vSURqOUgoDLvwY4BVZmARzh4TJjHFW4aPQ9VKb51F
-rNRJV2ON9TGK4HD6wtM/EfSapBIGEjRCB+YG+tBGOHf3Q7kK5WsAV0BSiDVY7N7u
-v+uzSadUYzqqPwydgHUwB3b4h4B3tRxOezjftU4++cGIxdWlAt/UBFTi/vh14P0u
-gd1X5JA/O59iCYDCLfv3BWSWqKm8BlOIw0WpWbwQtBHx+zmXwW3FfRI2yi+u2Jbq
-v0+udXj14QgGWu5KEUFh1D+doERIODe3jtNQcO70fmzcGL92pn5fYZ59RuoKsEYJ
-lco3R/+s/2GprgzYIlTWdWqJKsuzgh4kzzaE2w0XCxmPtGvXFYEntaBmGaHM1L07
-2uQphTf6zGS2DX1k5081t0XLEZaY1tfDeFdkK7l1Ce/UnCpqUz4gfYdQ8BIRm6+W
-3DA98rFQj8fh/KYY0OOd
-=WFJv
+iQIcBAEBAgAGBQJPlVeEAAoJEOSiRoyO7jvo6M8P/Ro184YT7P8mNxLRTtbXhsJI
+k7wd7KUPMUIy01j1mqk8CoCFnbQCMIcIQ+fpSZ2MdNnkk+Go/VNYdXBuqptozDsz
+5oeT+kJGdbrmTKognxEt+xnn4j8M78paqNUIb4FIAhqJMihItNksGXBmoB1tArAn
+fm5EGr3qRI4uJSL3+fxJNdxQ+r5WBGmeBEuJ3s2Fo14Pne0LcJf6KvwcNGOdlD/9
+OwHYC2Wy7yi1J1aqriwX8fqUfYCUBAnpK/lwg0SfE00LfbjfKGmJa1t5i0SCfuqx
+EvLgA/oIHaIwpn7BhxYGlY8oQbr32/LNlx6hVJHR9Q1T2P0CkLYUUdLV9+ajiNCu
+zMI1dfDjO3QxDfYfw10PjN5RZNTbIjtrnRu5Hh1VB76VZAlAkBFdPY/cRE68R8Eu
+X0BCUFSbWsfhm1bR4D0cTGeZ9rHbPwsfnBqxc8XAUdaK+AAZHS4gvjguPJfMZjAQ
+iAkP4sl2Hqkt1TYop374xuEWCfkEUJyKvcM2egkvn9+m4OVQ3zli/G686rRnrT9y
+c+41wRnr6bVNDIUaHusAayOoT9nizUdTbKuZSfqv2axYBv0DqoHyzUm+vlCOtvhp
+tMZEb5jNiqPP5y0tO2FWVkTB/uTCMlbms+XbM2VC0zgajykE4aS0TTkz7x70xdk5
+egygOIFwXnX3DZvWPpp4
+=4Jli
 -----END PGP SIGNATURE-----
