@@ -1,6 +1,9 @@
 # ChangeLog for app-text/libwps
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-text/cvs-repo/gentoo-x86/app-text/libwps/ChangeLog,v 1.20 2012/04/23 10:50:33 scarabeus Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-text/cvs-repo/gentoo-x86/app-text/libwps/ChangeLog,v 1.21 2012/04/23 13:18:17 scarabeus Exp $
+
+  23 Apr 2012; Tomáš Chvátal <scarabeus@gentoo.org> -libwps-0.2.5.ebuild:
+  Drop miss-release. 0.2.6 will be released soon.
 
 *libwps-0.2.5 (23 Apr 2012)
 
